--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
   <script src="/js/cover.js"></script>  
    <link href="/css/intro.css" rel="stylesheet" type="text/css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -37,9 +39,9 @@
 
               <ul class='page'>
                 <li></li>
-                <li>
-                  <a class="btn1" href="/profile">Signup</a>
-                  <a class="btn2" href="/profile">Login</a>
+                <li>                  
+                  <a class="btn1 fancybox fancybox.iframe"  href="/signup">Signup</a>
+                  <p><a class="btn2 fancybox fancybox.iframe"  href="/signup">Login</a></p>
                 </li>
                 <li></li>
                 <li></li>
@@ -57,18 +59,18 @@
                 <li></li>
               </ul>
               <figcaption>
-                <h1>Signup</h1>
+                <h1></h1>
                 <span></span>
-                <p>If this is your first time on this website</p>
-                <h1>Login</h1>
+                <p></p>
+                <h1></h1>
                 <span></span>
-                <p>If you are already logged in</p>
+                <p></p>
               </figcaption>
             </figure>
           </li>
         </ul>
       </div>
   </div>
-
+<img src='https://images7.alphacoders.com/393/393815.jpg' style='position:fixed;top:0px;left:0px;width:100%;height:100%;z-index:-1;'>
 </body>
 </html>
