--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,18 +1,25 @@
 body{
+  -webkit-filter: grayscale(100%); 
   background-image: url("https://i.imgur.com/cDu9h9L.png");
-  background-color: #9f9c62;
+  background-color: #818181;
   background-repeat: no-repeat;
   margin: 0 auto;
   float: none; 
   background-attachment: fixed;
   background-position: center;
+ 
     }
 
 h2 {
+  -webkit-filter: grayscale(100%);
   text-align: center;
 }
-
+.container{
+  -webkit-filter: grayscale(100%);
+  height:600px;
+}
 #app {
+  -webkit-filter: grayscale(100%);
   font-family: "Times New Roman", Times, serif;
   margin: 0;
   position: absolute;
@@ -23,6 +30,7 @@ h2 {
 }
 
 .transition {
+  filter: grayscale(100%);
     -webkit-transform: scale(1.6); 
     -moz-transform: scale(1.6);
     -o-transform: scale(1.6);
@@ -30,6 +38,7 @@ h2 {
 }
 
 form{  
+  filter: grayscale(100%);
 	-webkit-transition: all .4s ease-in-out;
 	-moz-transition: all .4s ease-in-out;
 	-o-transition: all .4s ease-in-out;
