--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,11 +15,7 @@
 
 <div class="container">  
     <div id="app" class="col-md-2">
-      <form action="/signup" method="post">
-        <div class="form-group">
-          <label for="usr">Name:</label>
-          <input type="text" class="form-control" id="usr" name="name">
-        </div>
+      <form action="/login" method="post">       
         <div class="form-group">
           <label for="mail">Email:</label>
           <input type="text" class="form-control" id="mail" name="email">
