--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -40,7 +40,7 @@ filter: grayscale(100%);
 	display: inline-block;
 	text-transform: uppercase;
 	border: 2px solid #2c3e50;
-	margin-top: 100px; 
+	margin-top: 50px; 
 	font-size: 1.2em;
 	font-weight: 700;
 	padding: 0.3em 0.4em;
@@ -85,6 +85,31 @@ filter: grayscale(100%);
 	color: #9f9c62;;
 }
 
+.btn3 {
+	filter: grayscale(100%);
+	width:120px;
+	height:30px;
+	display: inline-block;
+	text-transform: uppercase;
+	border: 2px solid #2c3e50;
+	margin-top: 100px; 
+	font-size: 1.2em;
+	font-weight: 700;
+	padding: 0.3em 0.4em;
+	text-align: center;
+	-webkit-transition: color 0.3s, border-color 0.3s;
+	-moz-transition: color 0.3s, border-color 0.3s;
+	transition: color 0.3s, border-color 0.3s;
+    -webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+	-ms-transition: all .4s ease-in-out;
+}
+
+.btn3:hover {
+	border-color: #9f9c62;
+	color: #9f9c62;;
+}
 
 /* basic grid, only for this demo */
 
