--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -41,7 +41,8 @@
                 <li></li>
                 <li>                  
                   <a class="btn1 fancybox fancybox.iframe"  href="/signup">Signup</a>
-                  <p><a class="btn2 fancybox fancybox.iframe"  href="/signup">Login</a></p>
+                  <p><a class="btn3"  href="/login">Enter</a></p>
+                  <p><a class="btn2 fancybox fancybox.iframe"  href="/login">Login</a></p>
                 </li>
                 <li></li>
                 <li></li>
