--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -39,10 +39,12 @@
 
               <ul class='page'>
                 <li></li>
-                <li>                  
-                  <a class="btn1 fancybox fancybox.iframe"  href="/signup">Signup</a>
-                  <p><a class="btn3"  href="/login">Enter</a></p>
-                  <p><a class="btn2 fancybox fancybox.iframe"  href="/login">Login</a></p>
+                <li>          
+                  <a class="btn1 fancybox fancybox.iframe"  href="/signup">Signup</a> 
+                  
+                  <p><a class="btn3" href="/profile">Retrobook </a></p>   
+                  <p><a class="btn2 fancybox fancybox.iframe"  href="/login">Login</a>
+                  </p>
                 </li>
                 <li></li>
                 <li></li>
