--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,8 +17,8 @@
     <div id="app" class="col-md-2">
       <form action="/login" method="post">       
         <div class="form-group">
-          <label for="mail">Email:</label>
-          <input type="text" class="form-control" id="mail" name="email">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" name="name">
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
