--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -42,7 +42,7 @@
                 <li>          
                   <a class="btn1 fancybox fancybox.iframe"  href="/signup">Signup</a> 
                   
-                  <p><a class="btn3" href="/profile">Retrobook </a></p>   
+                  <p><a class="btn3" href="/login">Retrobook </a></p>   
                   <p><a class="btn2 fancybox fancybox.iframe"  href="/login">Login</a>
                   </p>
                 </li>
