--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,22 +4,56 @@
 <meta charset="utf-8">
 <title>Vote For Me</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-<link href="/css/main.css" rel="stylesheet" type="text/css">
+<link href="/css/profile.css" rel="stylesheet" type="text/css">
 </head>
  
 <body>
-<h2>Results</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div id="f1_container" class="hover">
+        <div id="f1_card" class="shadow" onclick="toggle()">
+          <div class="front face">
+            <img src="http://www.benitz.com/BzJosephineK1830/PhotosCaliTrip/P37FtRossSE_ChapelPCard_s70c20.jpg" class="frame"/>
+          </div>
+          <div class="back face center">
+            <h1>HOME</h1>
+            <p>SEE MY PAGE</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-<div id="container">
-   
-    <div id="a"> 
-    <%= user.name %>
+    <div class="col-md-4">
+      <div id="f1_container" class="hover">
+        <div id="f1_card" class="shadow" onclick="toggle()">
+          <div class="front face">
+            <img src="  http://www.19thc-artworldwide.org/images/stories/spring_15/articles/garv26.jpg" class="frame" />
+          </div>
+          <div class="back face center">
+            <h1>MEMBERS</h1>
+            <p>SEE OTHER MEMBERS</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="b">
-    
+
+
+    <div class="col-md-4">
+      <div id="f1_container" class="hover">
+        <div id="f1_card" class="shadow" onclick="toggle()">
+          <div class="front face">
+            <img src="https://s-media-cache-ak0.pinimg.com/564x/6f/d3/71/6fd37169c96b95d7fd87f45664588bc3.jpg" class="frame" />
+          </div>
+          <div class="back face center">
+            <h1>NEWS</h1>
+            <p>SEE THE NEWS</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <br style="clear: both;">
   </div>
  
 
