--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,8 +34,9 @@
         </div>
         <h2>Signup Please</h2>
         <button type="submit" class="btn-danger center-block">Submit</button>
-
+         
         </form>
+<form  action="/uploads" enctype="multipart/form-data" method="post"><br><input multiple="file" name="file" id="file" type="file" /><br><br><input type="submit" value="Upload" /></form>
     </div>  
 </div>
 
