--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -82,8 +82,8 @@
             <img src="https://s-media-cache-ak0.pinimg.com/564x/6f/d3/71/6fd37169c96b95d7fd87f45664588bc3.jpg" class="frame" />
           </div>
           <div class="back face center">
-            <a href="/profile/<%= user.name %>/news"><h1>NEWS</h1>
-            <p>SEE THE NEWS</p></a>
+            <a href="/profile/<%= user.name %>/home"><h1>POST</h1>
+            <p>WRITE SOMETHING</p></a>
           </div>
         </div>
       </div>
