--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,6 +5,7 @@
 <title>Welcome</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link href="/css/profile.css" rel="stylesheet" type="text/css">
+<script src="/js/profile.js"></script>  
 </head>
  
 <body>
@@ -83,14 +84,31 @@
           </div>
           <div class="back face center">
             <a href="/profile/<%= user.name %>/home"><h1>POST</h1>
-            <p>WRITE SOMETHING</p></a>
+            <p>WRITINGS ON THE WALL</p></a>
           </div>
         </div>
       </div>
     </div>
   </div>
  </div>
+<div class="container">
+  <div class="col-md-4 col-md-offset-4">
+    <h2>Write Something <%=user.name%></h2>
+    <form action    =  "/profile/<%=user.name%>"
+     method    =  "post">
+      <div class="form-group" >
+    
+<div id="wrapper">
+        <input type="text" class="form-control" name ="write"  id="write" value="" size="50" >
+        <div id= "output"></div>
+        
 
+</div>
+        <div class="col-md-4 col-md-offset-4">
+          <button type="submit" class="btn btn-danger">POST</button></div>
+      </div>
+  </div>
 
 </body>
 </html>
+
