--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -11,8 +11,9 @@
   <script src="/js/cover.js"></script>  
    <link href="/css/intro.css" rel="stylesheet" type="text/css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.css" rel="stylesheet" type="text/css">
+  <link href="/css/nav.css" rel="stylesheet" type="text/css">
 </head>
-
+ <% include partials/headerintro.ejs %>
 <body>
 
 <div class="container">
