--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,9 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/js/signup.js"></script>
    <link href="/css/signup.css" rel="stylesheet" type="text/css">
+   <link href="/css/nav.css" rel="stylesheet" type="text/css">
 </head>
-
+<% include partials/headerlog.ejs %>
 <body>
 
 <div class="container">  
