--- a/views/members.ejs
+++ b/views/members.ejs
@@ -5,9 +5,10 @@
 <title>Members</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link href="/css/members.css" rel="stylesheet" type="text/css">
-
+<link href="/css/nav.css" rel="stylesheet" type="text/css">
+<link href="/css/nav.css" rel="stylesheet" type="text/css">
 </head>
-
+<% include partials/headermembers.ejs %>
 <body>
 
 <% members.forEach(function(user) { %>
