--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,9 +5,10 @@
 <title>Welcome</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link href="/css/profile.css" rel="stylesheet" type="text/css">
+<link href="/css/nav.css" rel="stylesheet" type="text/css">
 <script src="/js/profile.js"></script>  
 </head>
- 
+ <% include partials/header.ejs %>
 <body>
     <div class= " container ">
   <div class= " row ">
