--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,9 @@
 <script src="/js/photo.js"></script>  
 <link href="/css/profile.css" rel="stylesheet" type="text/css">
 <link href="/css/home.css" rel="stylesheet" type="text/css">
+<link href="/css/nav.css" rel="stylesheet" type="text/css">
 </head>
- 
+  <% include partials/headerhome.ejs %>
 <body>
 
 
