--- a/views/members.ejs
+++ b/views/members.ejs
@@ -21,7 +21,7 @@
   </div>
 </div>
   <% }) %>
-
+<img src='http://cdn.silodrome.com/wp-content/uploads/2013/01/vespa-scooter-vintage.jpg' style='position:fixed;top:0px;left:0px;width:100%;height:100%;z-index:-1; opacity:0.6;'>
 
 </body>
 </html>
