--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,13 +20,19 @@
             <img  src="http://localhost:8080/images/<%=user.file%>" class="frame"/>
           </div>
           <div class="back face center">
-            <h1><%=user.name%></h1>
+           <a href="/profile/<%= user.name %>/private"> <h1><%=user.name%></h1><p>Contact me on:</p><p><%=user.email%></p></a>
+           
             <p></p>
           </div>
         </div>
       </div>
     </div>
-    
+    <form id = "prive" action="/profile/<%=user.name%>/private" method = "post">
+ 
+  <input type="text" name="private" placeholder="Write on your wall" value="">
+  
+  <input type="submit" value="Submit">
+</form>
     <!--<div class="container">
   <div class="row">
     <div class="col-md-4">
@@ -94,7 +100,7 @@
  </div>
 <div class="container">
   <div class="col-md-4 col-md-offset-4">
-    <h2>Write Something <%=user.name%></h2>
+    <h2>Write Something public <%=user.name%></h2>
     <form action    =  "/profile/<%=user.name%>"
      method    =  "post">
       <div class="form-group" >
@@ -109,7 +115,7 @@
           <button type="submit" class="btn btn-danger">POST</button></div>
       </div>
   </div>
-
+<img src='https://gamespervertsplay.files.wordpress.com/2012/02/dusty-books-the-burden.jpg' style='position:fixed;top:0px;left:0px;width:100%;height:100%;z-index:-1; opacity:0.8;'>
 </body>
 </html>
 
