--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,11 +19,11 @@
       <form action="/login" method="post">       
         <div class="form-group">
           <label for="name">Name:</label>
-          <input type="text" class="form-control" id="name" name="name">
+          <input type="text" class="form-control" required="true" maxlength="10" id="name" name="name">
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd" name="password">
+          <input type="password" class="form-control" required="true" maxlength="20" id="pwd" name="password">
         </div>
         <h2>Signup Please</h2>
         <button type="submit" class="btn-danger center-block">Submit</button>
