--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,13 +26,15 @@
           </div>
         </div>
       </div>
-    </div>
-    <form id = "prive" action="/profile/<%=user.name%>/private" method = "post">
- 
-  <input type="text" name="private" placeholder="Write on your wall" value="">
-  
-  <input type="submit" value="Submit">
-</form>
+    </div>  
+
+ <div class="col-md-4 col-md-offset-4"> 
+    <form id = "prive" action="/profile/<%=user.name%>/private" method = "post"> 
+    <h2>Write Something in private</h2>
+  <input class="form-control" type="text" name="private" required="true" maxlength="10" placeholder="Write on your wall" value="">  
+  <div class="col-md-4 col-md-offset-4">
+  <input type="submit" class="btn btn-danger" value="Submit">
+</form></div></div>
     <!--<div class="container">
   <div class="row">
     <div class="col-md-4">
@@ -100,19 +102,19 @@
  </div>
 <div class="container">
   <div class="col-md-4 col-md-offset-4">
-    <h2>Write Something public <%=user.name%></h2>
+    <h2>Write Something in public</h2>
     <form action    =  "/profile/<%=user.name%>"
      method    =  "post">
       <div class="form-group" >
     
 <div id="wrapper">
-        <input type="text" class="form-control" name ="write"  id="write" value="" size="50" >
+        <input type="text" class="form-control" required="true" maxlength="10" name ="write"  placeholder="Write on our wall"  id="write" value="" size="50" >
         <div id= "output"></div>
         
 
 </div>
         <div class="col-md-4 col-md-offset-4">
-          <button type="submit" class="btn btn-danger">POST</button></div>
+          <button type="submit" class="btn btn-danger">Post</button></div>
       </div>
   </div>
 <img src='https://gamespervertsplay.files.wordpress.com/2012/02/dusty-books-the-burden.jpg' style='position:fixed;top:0px;left:0px;width:100%;height:100%;z-index:-1; opacity:0.8;'>
