--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,19 +24,19 @@
 >
         <div class="form-group">
           <label for="usr">Name:</label>
-          <input width="pixels"type="text" class="form-control" name="name" />
+          <input width="pixels"type="text" class="form-control" required="true" maxlength="10" name="name" />
         </div>
         <div class="form-group">
           <label for="mail">Email:</label>
-          <input type="text" class="form-control"  name="email" />
+          <input type="text" class="form-control"  required="true" maxlength="20" name="email" />
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
-         <input type="text" class="form-control" name="password" />
+         <input type="text" class="form-control" required="true" maxlength="10" name="password" />
         </div>
         <div class="form-group">
           <label for="Photo">Photo:</label>
-          <input type="file"  class="form-control" name="file" />
+          <input type="file"  class="form-control" required="true" name="file" />
         </div>
         <h2>Signup Please</h2>
         <center><input type="submit" value="Upload" /></center>
