--- a/views/prive.ejs
+++ b/views/prive.ejs
@@ -19,6 +19,7 @@
     <div class="in">
      
          <h4><%= users.private %></h4>
+         <img  src="http://localhost:8080/images/<%= users.photos %>" />
     </div>
   </div>
 </div>
