--- a/views/partials/headerhome.ejs
+++ b/views/partials/headerhome.ejs
@@ -2,7 +2,7 @@
 <div class="nav-menu">
 <ul>
 <li class="current_page_item"><a href="/">Home</a></li>      
-<li class="page_item page-item-29"><a href="/<%= user.name %>">Back</a></li>      
+<li class="page_item page-item-30"><a href="/profile/<%= name %>">My Profile</a></li>         
 <li class="page_item page-item-30"><a href="/logout">Logout</a></li>
 </li>      
 </ul>
