--- a/views/partials/headermembers.ejs
+++ b/views/partials/headermembers.ejs
@@ -1,7 +1,8 @@
 <nav id="site-navigation" class="main-navigation" role="navigation">
 <div class="nav-menu">
 <ul>
-<li class="current_page_item"><a href="/">Home</a></li>          
+<li class="current_page_item"><a href="/">Home</a></li>  
+<li class="page_item page-item-30"><a href="/profile/<%= names %>">Back</a></li>          
 <li class="page_item page-item-30"><a href="/logout">Logout</a></li>        
 </li>      
 </ul>
